# IDAstar

./: .gitignore  .gitmodules  README.md
opencv_utils/: run_planner.py
src/cruise/: CMakeLists.txt  package.xml
src/cruise/cruise/: dynamic_map_pub.py
src/cruise/src/: dynamic_maps.cpp  ida.cpp
src/path/launch/: map_launch.py
